--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "eframe_template"
+name = "task-picker"
 version = "0.1.0"
-authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
+authors = ["Thomas Krause <thomaskrause@posteo.de>"]
 edition = "2021"
 rust-version = "1.65"
 
@@ -14,6 +14,7 @@ eframe = { version = "0.21.0", default-features = false, features = [
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
+minicaldav = "0.6.0"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
