--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,25 @@
 [package]
-name = "task-picker"
-version = "0.1.0"
 authors = ["Thomas Krause <thomaskrause@posteo.de>"]
 edition = "2021"
+name = "task-picker"
 rust-version = "1.65"
-
+version = "0.1.0"
 
 [dependencies]
+anyhow = "1"
+eframe = {version = "0.21.0", default-features = false, features = [
+  "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
+  "default_fonts", # Embed the default egui fonts.
+  "glow", # Use the glow rendering backend. Alternative: "wgpu".
+  "persistence", # Enable restoring app state when restarting the app.
+]}
 egui = "0.21.0"
-eframe = { version = "0.21.0", default-features = false, features = [
-    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
-    "default_fonts", # Embed the default egui fonts.
-    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-    "persistence",   # Enable restoring app state when restarting the app.
-] }
 minicaldav = "0.6.0"
+ureq = "2.5"
+url = "2"
 
 # You only need serde if you want app persistence:
-serde = { version = "1", features = ["derive"] }
+serde = {version = "1", features = ["derive"]}
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -29,14 +31,12 @@ console_error_panic_hook = "0.1.6"
 tracing-wasm = "0.2"
 wasm-bindgen-futures = "0.4"
 
-
 [profile.release]
 opt-level = 2 # fast and small wasm
 
 # Optimize all dependencies even in debug builds:
 [profile.dev.package."*"]
 opt-level = 2
-
 
 [patch.crates-io]
 
