--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ eframe = {version = "0.21.0", default-features = false, features = [
   "persistence", # Enable restoring app state when restarting the app.
 ]}
 egui = "0.21.0"
+egui-notify = "0.6"
+itertools = "0.10"
 minicaldav = "0.6.0"
 ureq = "2.5"
 url = "2"
