--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ itertools = "0.10"
 minicaldav = "0.6.0"
 ureq = "2.5"
 url = "2"
+rayon = "1.7.0"
 
 # You only need serde if you want app persistence:
 serde = {version = "1", features = ["derive"]}
