--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,14 @@ egui = "0.21.0"
 egui-notify = "0.6"
 itertools = "0.10"
 minicaldav = "0.6.0"
+rayon = "1.7.0"
 ureq = "2.5"
 url = "2"
-rayon = "1.7.0"
 
 # You only need serde if you want app persistence:
+chrono = {version = "0.4.23", features = ["serde"]}
+ellipse = {version = "0.2.0"}
 serde = {version = "1", features = ["derive"]}
-ellipse = "0.2.0"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
