Get all pages of GitLab issues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ chrono = {version = "0.4.23", features = ["serde"]}
 ellipse = {version = "0.2.0"}
 serde = {version = "1", features = ["derive"]}
 json = "0.12.4"
+log = "0.4.17"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
