--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ serde = {version = "1", features = ["derive"]}
 image = "0.24.5"
 tracing-subscriber = "0.3"
 
+[patch.crates-io]
+minicaldav = { git = 'https://gitlab.com/thomaskrause/minicaldav.git' } 
+
 [[bin]]
 name = "taskpicker"
 
