--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,11 +28,19 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - run: sudo apt-get install libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libssl-dev
+      - run: sudo apt update
+      - run: sudo apt-get install -y libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libssl-dev
       - uses: actions-rs/cargo@v1
         with:
           command: test
           args: --lib
+      - name: Archive screenshots for failed UI tests
+        uses: actions/upload-artifact@v3
+        with:
+          name: actual-screenshots.
+          path: |
+            src/app/tests/actual
+          retention-days: 5
 
   fmt:
     name: Rustfmt
