--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,7 +28,7 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - run: sudo apt update
+      - run: sudo apt-get update
       - run: sudo apt-get install -y libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libssl-dev
       - uses: actions-rs/cargo@v1
         with:
@@ -36,6 +36,7 @@ jobs:
           args: --lib
       - name: Archive screenshots for failed UI tests
         uses: actions/upload-artifact@v3
+        if: ${{ always() }}
         with:
           name: actual-screenshots.
           path: |
