--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ eframe = {version = "0.21.0", default-features = false, features = [
   "default_fonts", # Embed the default egui fonts.
   "glow", # Use the glow rendering backend. Alternative: "wgpu".
   "persistence", # Enable restoring app state when restarting the app.
+  "wayland",
 ]}
 egui = { version="0.21.0" }
 egui-notify = "0.6"
@@ -38,6 +39,9 @@ tracing-subscriber = "0.3"
 
 mockall_double = "0.3"
 
+[patch.crates-io]
+egui = { git = "https://github.com/thomaskrause/egui.git", branch="feature/wayland-app-id" }
+eframe = { git = "https://github.com/thomaskrause/egui.git", branch="feature/wayland-app-id" }
 
 [dev-dependencies]
 visual-hash = "3"
