--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,14 @@ eframe = {version = "0.21.0", default-features = false, features = [
   "persistence", # Enable restoring app state when restarting the app.
   "wayland",
 ]}
-egui = { version="0.21.0" }
+egui = {version = "0.21.0"}
 egui-notify = "0.6"
+egui-phosphor = "0.1.0"
 itertools = "0.10"
 minicaldav = "0.7"
 rayon = "1.7.0"
 ureq = "2.5"
 url = "2"
-egui-phosphor = "0.1.0"
 
 # You only need serde if you want app persistence:
 chrono = {version = "0.4.24", default-features = false, features = ["std", "clock", "serde"]}
@@ -40,15 +40,15 @@ tracing-subscriber = "0.3"
 mockall_double = "0.3"
 
 [patch.crates-io]
-egui = { git = "https://github.com/thomaskrause/egui.git", branch="feature/wayland-app-id" }
-eframe = { git = "https://github.com/thomaskrause/egui.git", branch="feature/wayland-app-id" }
+eframe = {git = "https://github.com/emilk/egui.git"}
+egui = {git = "https://github.com/emilk/egui.git"}
 
 [dev-dependencies]
-visual-hash = "3"
+egui_skia = {version = "0.3.0", features = ["cpu_fix"]}
 mockall = "0.11"
-egui_skia = {version="0.3.0", features=["cpu_fix"]}
 skia-safe = "0.62.0"
 tempfile = "3"
+visual-hash = "3"
 
 [[bin]]
 name = "taskpicker"
