--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,14 @@ version = "0.3.0"
 
 [dependencies]
 anyhow = {version = "1"}
-eframe = {version = "0.26", default-features = false, features = [
+eframe = {version = "0.26.2", default-features = false, features = [
   "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
   "default_fonts", # Embed the default egui fonts.
   "glow", # Use the glow rendering backend. Alternative: "wgpu".
   "persistence", # Enable restoring app state when restarting the app.
   "wayland",
 ]}
-egui = {version = "0.26"}
+egui = ">=0.26.2, <0.27.0"
 egui-notify = "0.13"
 egui-phosphor = "0.4.0"
 itertools = "0.10"
@@ -40,7 +40,7 @@ tracing-subscriber = "0.3"
 mockall_double = "0.3"
 
 [dev-dependencies]
-egui-screenshot-testing = "0.2.0"
+egui-screenshot-testing = {version = "0.2.0"}
 mockall = "0.11"
 tempfile = "3"
 
