--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ image = "0.24.5"
 tracing-subscriber = "0.3"
 
 mockall_double = "0.3"
+base64 = "0.22.0"
 
 [dev-dependencies]
 egui-screenshot-testing = {version = "0.3.1"}
