--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,17 +8,17 @@ repository = "https://github.com/thomaskrause/task-picker"
 version = "0.6.0"
 
 [dependencies]
-anyhow = {version = "1"}
-eframe = {version = "0.26.2", default-features = false, features = [
-  "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
+anyhow = { version = "1" }
+eframe = { version = "0.31", default-features = false, features = [
+  "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
   "default_fonts", # Embed the default egui fonts.
-  "glow", # Use the glow rendering backend. Alternative: "wgpu".
-  "persistence", # Enable restoring app state when restarting the app.
+  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
+  "persistence",   # Enable restoring app state when restarting the app.
   "wayland",
-]}
-egui = ">=0.26.2, <0.27.0"
-egui-notify = "0.13"
-egui-phosphor = "0.4.0"
+] }
+egui = "0.31"
+egui-notify = "0.19"
+egui-phosphor = "0.9.0"
 itertools = "0.10"
 minicaldav = "0.8"
 rayon = "1.7.0"
@@ -26,11 +26,15 @@ ureq = "2.5"
 url = "2"
 
 # You only need serde if you want app persistence:
-chrono = {version = "0.4.24", default-features = false, features = ["std", "clock", "serde"]}
-ellipse = {version = "0.2.0"}
+chrono = { version = "0.4.24", default-features = false, features = [
+  "std",
+  "clock",
+  "serde",
+] }
+ellipse = { version = "0.2.0" }
 json = "0.12.4"
 log = "0.4.17"
-serde = {version = "1", features = ["derive"]}
+serde = { version = "1", features = ["derive"] }
 
 # native:
 image = "0.24.5"
@@ -41,7 +45,7 @@ base64 = "0.22.0"
 keyring = "2.3.3"
 
 [dev-dependencies]
-egui-screenshot-testing = {version = "0.3.1"}
+egui_kittest = { version = "0.31.0", features = ["wgpu", "snapshot"] }
 mockall = "0.11"
 tempfile = "3"
 
@@ -67,7 +71,12 @@ cargo-dist-version = "0.15.0"
 # CI backends to support
 ci = "github"
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+targets = [
+  "aarch64-apple-darwin",
+  "x86_64-apple-darwin",
+  "x86_64-unknown-linux-gnu",
+  "x86_64-pc-windows-msvc",
+]
 # The installers to generate for each app
 installers = []
 # Publish jobs to run in CI
